--- a/trangcaytrong.css
+++ b/trangcaytrong.css
@@ -19,7 +19,7 @@
 	align-items: center;
 }
 .conten img{
-	width:90%;
+	width:70%;
 	height: 50%;
 }
 .conten a{
@@ -35,11 +35,28 @@
 .footer{
 	background-color: gray;
 	width: 100%;
-	height: 250px;
+	height: 200px;
 	color: white;
 	font-size: 20px;
 	padding-top: 10px;
 }
 body{
 	overflow-x: hidden;
+}
+#tinnong{
+	background-color: #8abe01;
+	
+}
+#tinnong div a{
+	/*background-color: #8abe01;*/
+	color: black;
+}
+.sanpham img{
+	width: 70%
+}
+.sanpham *{
+	margin-top: 20px;
+}
+.sanpham p{
+	text-align: left;
 }
